<resources>
    <string name="app_name">QMS</string>
    <string name="title_activity_login">User Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Incorrect username or password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="nric">NRIC</string>
    <string name="re_enter_string_error_incorrect_password">Re-enter password</string>
    <string name="title_activity_register">Register</string>
    <string name="scan_barcode">SCAN BARCODE</string>
    <string name="manage_tickets">MANAGE TICKETS</string>
    <string name="merchant_login">Merchant Login</string>
    <string name="title_activity_merchant_login">Merchant Login</string>
    <string name="user_login">User Login</string>
    <string name="title_activity_merchant_menu">MerchantMenu</string>
    <string name="no_queues_found">No queues found</string>
    <string name="title_activity_ticket_info">TicketInfoActivity</string>
    <string name="ticket_id">Ticket ID :</string>
    <string name="user_id">Customer Name :</string>
    <string name="no_tickets_found">No tickets found</string>
    <string name="logout">Logout</string>
    <string name="add_queue">Add Queue</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="title_activity_qrcode_generator">QRCodeGenerator</string>
    <string name="qr_image">QR Image</string>
    <string name="scan_the_qr_code_above_to_enter_the_queue">Scan the QR code above to enter the queue</string>
    <string name="merchant_name">Queue Name :</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="title_activity_scan_qr">Scan</string>
    <string name="turn_on_flashlight">On</string>
    <string name="turn_off_flashlight">Off</string>
</resources>
